--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,17 @@
     <string name="list_fragment">Recycler View</string>
     <string name="sky_fragment">Interfaz del cielo</string>
     <string name="calendar_text">Calendario estelar</string>
+    <string name="body_description">Descipción del cuerpo celeste</string>
+    <string name="name_body">Nombre del astro</string>
+    <string name="filter">Filtrar</string>
+    <string name="characteristics">Características</string>
+    <string name="name_filter">Nombre filtro</string>
+    <string name="planet_filter">Planeta</string>
+    <string name="star_filter">Estrella</string>
+    <string name="dwarf_planet_filter">Planeta enano</string>
+    <string name="asteroid_filter">Asteróide</string>
+    <string name="black_hole_filter">Agujero negro</string>
+    <string name="satellite_filter">Satélite</string>
+    <string name="artificial_satellite_filter">Satélite artificial</string>
+    <string name="galaxy_filter">Galaxia</string>
 </resources>
