--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">astralis</string>
+    <string name="bodies_file_xml">bodies</string>
     <!-- ErrorView -->
     <string name="title_error">Titulo del error</string>
     <string name="description_error">Descripción del error</string>
@@ -38,7 +39,7 @@
     <string name="close">Cerrar</string>
 
 
-    <string name="sky_fragment">Interfaz del cielo</string>
+    <string name="sky_fragment">Sistema solar</string>
     <string name="calendar_text">Calendario estelar</string>
 
 </resources>
